--- a/ZevitTask/ZevitTask.csproj
+++ b/ZevitTask/ZevitTask.csproj
@@ -24,6 +24,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Adapter\" />
       <Folder Include="Domain\Port\In\" />
       <Folder Include="Infrastructure\" />
     </ItemGroup>
